--- a/wp-content/themes/understrap-child/sass/theme/_blog.scss
+++ b/wp-content/themes/understrap-child/sass/theme/_blog.scss
@@ -37,7 +37,6 @@
 		.custom-html-widget
 		{
 			@extend .text-center;
-			@extend .d-inline-block;
 			margin-bottom: 60px; /* Blog Hack - Tim */
 		}
 
